# rust-sgx-remote-attestation

ra-client/src/: context.rs  error.rs
ra-common/: Cargo.toml
ra-common/src/: msg.rs
ra-enclave/: Cargo.toml
ra-enclave/src/: context.rs  error.rs
ra-sp/: Cargo.toml
ra-sp/src/: attestation_response.rs  context.rs  error.rs  ias.rs
sgx-crypto/: Cargo.toml
sgx-crypto/src/: certificate.rs  error.rs  key_exchange.rs  lib.rs  signature.rs  tls_psk.rs
sgx-crypto/tests/: test_tls.rs
