[package]
name = "sgx-crypto"
version = "0.1.0"
authors = ["Natnatee Dokmai <ndokmai@indiana.edu>"]
edition = "2018"

[features]
default = []

[dependencies]
regex = "1.3.3"
base64 = "0.11"
byteorder = "1.2.1"
mbedtls = { git = "ssh://git@git.rosetta.ericssondevops.com/gftl-er-5g-hosts/authentic-execution/sgx-attestation/rust-mbedtls", features = ["rdrand"] }
