[package]
name = "sgx-crypto"
version = "0.1.0"
authors = ["Natnatee Dokmai <ndokmai@indiana.edu>"]
edition = "2018"

[features]
default = []

[dependencies]
regex = "1.3.3"
base64 = "0.11"
byteorder = "1.2.1"
mbedtls = { git = "https://github.com/gianlu33/rust-mbedtls.git", tag="fosdem-21", features = ["rdrand"] }
anyhow = "1.0.38"
